--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&subset=cyrillic-ext');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed&subset=cyrillic-ext');
+:root {}
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -22,42 +23,46 @@ section {
   margin-bottom: 2em;
 }
 
-
-
-
 /* Common Styles */
+
 .invisible {
   opacity: 0;
 }
 
 /* Header */
+
 .header-controls-pics {
   display: flex;
   justify-content: space-between;
   max-width: 280px;
   margin-left: auto;
 }
+
 .header-controls-pic {
   height: 32px;
   width: 32px;
   margin: 0 10px;
-  background-image: url(../img/header-controls-sprite.png);
+  background-image: url(./img/header-controls-sprite.png);
   background-repeat: no-repeat;
   cursor: pointer;
 }
+
 .header-controls-search {
   position: relative;
   z-index: 1;
   background-position: -64px 0;
 }
+
 .header-controls-profile {
   position: relative;
   background-position: -32px 0;
 }
+
 .header-controls-cart {
   position: relative;
   background-position: 0 0;
 }
+
 .header-controls-cart-full {
   position: absolute;
   right: -10px;
@@ -73,6 +78,7 @@ section {
   background: linear-gradient(90deg, #ff65a5 1.11%, #ff8076 100%);
   box-shadow: 0px 2px 8px rgba(255, 101, 165, 0.6), inset 0px 1px 1px #ff8076;
 }
+
 .header-controls-search-form {
   position: absolute;
   right: 65px;
@@ -86,6 +92,7 @@ section {
   border-radius: 50px;
   text-align: right;
 }
+
 .header-controls-search-form .form-control {
   width: 100%;
   height: 100%;
@@ -96,6 +103,7 @@ section {
 }
 
 /* Banner */
+
 .banner {
   position: relative;
 }
@@ -116,12 +124,14 @@ section {
 }
 
 /* Preloader */
+
 .preloader {
   margin: 10px auto;  
   position: relative;
   width: 30px;
   height: 30px;
 }
+
 .preloader span {
   border: 0;
   margin: 0;
@@ -131,24 +141,28 @@ section {
   border-radius: 50%;
   animation: spin 2s ease infinite;
 }
+
 .preloader :first-child {
   background: #19A68C;
   animation-delay: -1.5s;
 }
+
 .preloader :nth-child(2) {
   background: #ff748b;
   animation-delay: -1s;
 }
+
 .preloader :nth-child(3) {
   background: #ffb676;
   animation-delay: -0.5s;
 }
+
 .preloader :last-child {
   background: #727e86;
 }
+
 @keyframes spin {
-  0%,
-  100% {
+  0%, 100% {
     transform: translate(0);
   }
   25% {
@@ -163,11 +177,13 @@ section {
 }
 
 /* Top Sales */
+
 .top-sales {
   min-height: 300px;
 }
 
 /* Catalog */
+
 .catalog {
   min-height: 600px;
 }
@@ -212,6 +228,7 @@ section {
 }
 
 /* Footer */
+
 .footer {
   padding: 0 25px;
 }
@@ -221,6 +238,7 @@ section {
   justify-content: space-between;
   margin: 12px auto 0;
 }
+
 .footer-pay-systems {
   width: 46px;
   height: 28px;
@@ -228,26 +246,33 @@ section {
   border-radius: 8px;
   background-color: #FFFFFF;
   background-repeat: no-repeat;
-  background-image: url(../img/footer-sprite.png);
+  background-image: url(./img/footer-sprite.png);
 }
+
 .footer-pay-systems:not(:first-child) {
   margin-left: 5px;
 }
+
 .footer-pay-systems-paypal {
   background-position: -2px -6px;
 }
+
 .footer-pay-systems-master-card {
   background-position: -54px -8px;
 }
+
 .footer-pay-systems-visa {
   background-position: -104px -8px;
 }
+
 .footer-pay-systems-yandex {
   background-position: -154px -8px;
 }
+
 .footer-pay-systems-webmoney {
   background-position: -2px -46px;
 }
+
 .footer-pay-systems-qiwi {
   background-position: -52px -46px;
 }
@@ -255,6 +280,7 @@ section {
 .footer-social-links {
   margin-top: 10px;
 }
+
 .footer-social-link {
   display: inline-block;
   width: 36px;
@@ -262,14 +288,17 @@ section {
   margin: 0 5px;
   border-radius: 50%;
   background-repeat: no-repeat;
-  background-image: url(../img/footer-sprite.png);
+  background-image: url(./img/footer-sprite.png);
 }
+
 .footer-social-link-twitter {
   background-position: -107px -42px;
 }
+
 .footer-social-link-vk {
   background-position: -157px -42px;
 }
+
 .footer-social-link:hover {
   cursor: pointer;
 }
@@ -287,6 +316,7 @@ section {
 }
 
 /* Bootstrap */
+
 .nav-link.active {
   color: #ff0000;
 }
@@ -304,4 +334,29 @@ h2, .h2 {
 .btn-outline-primary:hover {
   background-color: #727e86;
   border-color: #727e86;
+}
+
+/* CUSTOM */
+
+.col-4 {
+  margin-bottom: 1em;
+}
+
+.catalog-item-card {
+  margin-bottom: 0em;
+}
+
+.card-img-container {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.card {
+  min-height: 100%;
+  justify-content: flex-end;
+}
+
+.card-body {
+  flex: 0 0 auto;
 }
